# codehive

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  render.yaml
.github/workflows/: ci.yml
api/: .dockerignore  .env.example  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
api/src/: index.ts
api/src/lib/: errors.ts
api/src/plugins/: auth.ts  cors.ts  rate-limit.ts  ws.ts
api/src/routes/: execute.ts  executions.ts  health.ts  root.ts  worker-api.ts  workers.ts
api/src/services/: db.ts  events.ts  executor.ts  queue.ts  ws-observer.ts
api/src/types/: index.ts
api/tests/: db.test.ts  execute.test.ts  health.test.ts  queue.test.ts  workers.test.ts
api/tests/integration/: full-flow.test.ts  queue-pg.test.ts  worker-flow.test.ts
dashboard/: .dockerignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
dashboard/src/: App.svelte  app.css
dashboard/src/components/: CodeEditor.svelte  ExecutionCard.svelte  ExecutionCard.test.ts  StatusBadge.svelte  StatusBadge.test.ts
dashboard/src/lib/: api.test.ts  (+3 more)
db/migrations/: 001_init.sql
docker/: api.Dockerfile  dashboard.Dockerfile  docker-compose.yml  orchestrator.Dockerfile  worker.Dockerfile
docs/: API_SPEC.md  CODEHIVE_WIKI.md  MEGA_ENGENHARIA_REPORT.md  MIGRATION_PATHS.md  PROMPTS.md
orchestrator/: .dockerignore  go.mod
orchestrator/cmd/: main.go
scripts/: deploy.ps1  dev.ps1
shared/: TYPES.md
worker/: Cargo.toml
worker/src/: main.rs  runner.rs  sandbox.rs  types.rs
(+16 files in other folders)
